# ospetrail

./: .gitignore  README.md  pyproject.toml
ospetrail/: __main__.py  ospetrail.py
