[tool.poetry]
name = "ospetrail"
version = "0.1.0"
description = "Operating System & Package Error Trail"
authors = ["renyuneyun (Rui Zhao) <renyuneyun@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.1.1"
pyalpm = "^0.10.6"
uptime = "^3.0.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
